--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -1,12 +1,11 @@
-{%macro camposNuevos(field) %}
-<h2 class="font-bold text-gray-800">{{field.label}}</h2>
-<dd>{{field(**kwargs) | safe}}</dd>
-{%if field.errors%}
-<ul>
-    {%for error in field.errors%}
-        <li style="color: red;">{{error}}</li>
-    {%endfor%}
-</ul>
- 
-{%endif%}
-{%endmacro%}
+{% macro campoNuevo(field) %}
+<td>{{field.label}}</td>
+<dd>{{field(**kwargs) | safe }}</dd>
+
+{% if field.errors %}
+    {% for error in field.errors %}
+           <li style="color: red; font-size: x-small;padding: 3px;">{{error}}</li>
+    {% endfor %}
+{% endif %}
+
+{% endmacro %}
