--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowbite Flask</title>
     <link rel="stylesheet" href="{{url_for('static',filename='dist/output.css')}}">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded-sm dark:bg-gray-900">
         <div class="container flex flex-wrap items-center justify-between mx-auto">
             <a href="#" class="flex items-center">
-                <img src="{{url_for('static',filename='img/IDGS805.png')}}" class=" rounded-2xl h-6 mr-3 sm:h-9" alt="Flowbite Logo">
+                <img src="{{url_for('static',filename='img/SUImage.png')}}" class=" rounded-2xl h-6 mr-3 sm:h-9" alt="Flowbite Logo">
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flask IDGS</span>
             </a>
             <div class="flex md:order-2">
@@ -68,14 +69,11 @@
         {%endwith%}
        
         {% block container%}
-       
+
         {% endblock %}
        
     </div>
- 
-   
- 
- 
+
     <div class="fixed z-50 w-full h-16 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600">
         <div class="grid h-full max-w-lg grid-cols-5 mx-auto">
             <button data-tooltip-target="tooltip-home" type="button" class="inline-flex flex-col items-center justify-center px-5 rounded-s-full hover:bg-gray-50 dark:hover:bg-gray-800 group">
@@ -134,7 +132,7 @@
         </div>
     </div>
  
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.js"></script>
 </body>
  
 </html>
