--- a/templates/maestros/listadoMaes.html
+++ b/templates/maestros/listadoMaes.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block container %}
 
 <div class="py-32 relative overflow-x-auto sm:rounded-lg">
-    <a href="alumnos" class="bg-green-500 text-white px-4 py-2 rounded flex items-center gap-2 hover:bg-green-600">
+    <a href="/maestros/agregar" class="bg-green-500 text-white px-4 py-2 rounded flex items-center gap-2 hover:bg-green-600">
         <svg class="w-6 h-6 text-white-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12h4m-2 2v-4M4 18v-1a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Zm8-10a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
         </svg>
@@ -46,7 +46,7 @@
         <td class="px-6 py-4">{{ maes.email }}</td>
         <td class="px-6 py-4 text-right">
           <a
-            href="modificar?id={{ maes.matricula }}"
+            href="/maestros/modificar?matricula={{ maes.matricula }}"
             class="flex items-center gap-2 bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600"
           >
             <svg
@@ -72,7 +72,7 @@
         </td>
         <td class="px-6 py-4 text-right">
           <a
-            href="detalles?id={{ maes.matricula }}"
+            href="/maestros/detalles?matricula={{ maes.matricula }}"
             class="flex items-center gap-2 bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600"
           >
             <svg
@@ -90,7 +90,7 @@
         </td>
         <td class="px-6 py-4 text-right">
           <a
-            href="eliminar?id={{ maes.matricula }}"
+            href="/maestros/eliminar?matricula={{ maes.matricula }}"
             class="flex items-center gap-2 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600"
           >
             <svg
